removed the .env file

--- a/src/components/Dashboard/pages/pages.css
+++ b/src/components/Dashboard/pages/pages.css
@@ -2,6 +2,10 @@
     font-family: body;
 }
 
+.task-table{
+    overflow: hidden;
+}
+
 .task-table tr{
     font-family: content-body;
     font-size: 1.1rem;
